--- a/README.adoc
+++ b/README.adoc
@@ -22,7 +22,7 @@ NOTE: TP inspiré du tutoriel réalisé avec mailto:mosser.sebastien@uqam.ca[Sé
 
 == Objectifs
 
-- Créer une simple application java (commende de boissons)
+- Créer une simple application java (commande de boissons)
 - Créer des tests d'acceptation
 - Mettre en oeuvre l'intégration continue (CI -- _Continous Integration_)
 
